examples/malgo/error/InferEither.mlg
-- Issue: Compiler crashes when defining data Either a b = Left a | Right b
-- https://github.com/malgo-lang/malgo/issues/59

module InferEither = {
  import Builtin;
  import Prelude;

  data Either a b = Left a | Right b;

  id1 :: Either String Int32 -> Either String Int32;
  id1 = {x -> x};

  id2 :: Either Bool Int32 -> Either Bool Int32;
  id2 = {x -> x};

  main = {
    let x = Right 1;
    -- type error (String is not Bool)
    id1 x |> id2 |> { Right y -> print_Int32 y }
  };
}
